[package]
name          = "scaproust"
version       = "0.2.0"
authors       = ["blabaere <benoit.labaere@gmail.com>"]
description   = "Nanomsg scalability protocols implementation in rust. Various messaging patterns over pluggable transports"
readme        = "README.md"
keywords      = ["nanomsg", "messaging", "protocol", "network", "networking"]
categories    = ["network-programming"]
license       = "MIT/Apache-2.0"
documentation = "https://blabaere.github.io/scaproust"
homepage      = "https://github.com/blabaere/scaproust"
repository    = "https://github.com/blabaere/scaproust"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "appveyor.yml",
  "test/**/*",
]

[badges]
travis-ci = { repository = "blabaere/scaproust" }
appveyor = { repository = "blabaere/scaproust" }

[dependencies]
log = "0.3.6"
byteorder = "0.5.3"
time = "0.1.36"
mio = "0.6.4"
mio-uds = "0.6.2"

[target.'cfg(windows)'.dependencies]
miow = "0.2.0"
mio-named-pipes = "0.1.4"
winapi = "0.2.8"

[dev-dependencies]
env_logger = "0.3.5"
stainless = "0.1.10"
rand = "0.3"

[[test]]
name = "test"
path = "test/test.rs"
