[package]
name          = "scaproust"
version       = "0.3.2"
authors       = ["blabaere <benoit.labaere@gmail.com>"]
description   = "Nanomsg scalability protocols implementation in rust. Various messaging patterns over pluggable transports"
readme        = "README.md"
keywords      = ["nanomsg", "messaging", "protocol", "network", "networking"]
categories    = ["network-programming"]
license       = "MIT/Apache-2.0"
documentation = "https://blabaere.github.io/scaproust"
homepage      = "https://github.com/blabaere/scaproust"
repository    = "https://github.com/blabaere/scaproust"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "appveyor.yml",
  "test/**/*",
]

[badges]
travis-ci = { repository = "blabaere/scaproust" }
appveyor = { repository = "blabaere/scaproust" }

[dependencies]
log        = "0.3.9"
byteorder  = "1.2.1"
time       = "0.1.39"
mio        = "0.6.12"
mio-uds    = "0.6.4"
mio-extras = "2.0.3"
iovec      = "0.1.1"

[target.'cfg(windows)'.dependencies]
miow = "0.3.1"
mio-named-pipes = "0.1.6"
winapi = "0.3.3"

[dev-dependencies]
env_logger = "0.4.3"
rand = "0.3.20"

[[test]]
name = "test"
path = "test/test.rs"

#[profile.release]
#debug = true
